kubernetes/serving/kserve/auto/phi-chat-2-external-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: phi-chat-external-virtualservice
  labels:
    app.kubernetes.io/name: phi-chat-external-virtualservice
    app.kubernetes.io/part-of: llm-serving
  namespace: llm-serving
spec:
  hosts:
    - "*"
  gateways:
    - knative-serving/knative-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /v1/
      route:
        - destination:
            host: phi-chat-2-predictor.llm-serving.svc.cluster.local
            port:
              number: 80
